--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container{
+  max-height: 20vw;
+  overflow: auto;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.main{
+  width: 100%;
+  height: 36vh;
+  float:left;
+  box-sizing: border-box;
+  margin: 2px 0;
+  transition: .5s;
+}
+body{
+  text-align: left;
+  padding: 8px;
+  min-height: 100vh;
+  max-width: 100vw;
+  font-size: 2vmin;
+  overflow: hidden;
+  transition: .5s;
+}
+.btn{
+  width: 15vw;
+  height: 6vh;
+  font-size: calc(6px + 3vmin);
+  position: absolute;
+  bottom: 2%;
+  right: 5%;
+  transition: .5s;
+  border-radius: 8px;
+}
+*{
+  padding: 0;
+  margin: 0;
 }
